hphp/hack/test/enum_supertyping/typing/visibility.bad.php.exp
File "visibility.bad.php", line 7, characters 7-7:
Enum B includes enum A but their constraints are incompatible (Typing[4388])
